# FaceDetector

./: README.md
FaceViewer/: CMakeLists.txt  FaceViewer.qrc  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  camera.cpp  camera.h  camerachooserdialog.cpp  camerachooserdialog.h  camerachooserdialog.ui  controlwidget.cpp  controlwidget.h  controlwidget.ui  fpscounter.cpp  fpscounter.h  imagewidget.cpp  imagewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rectaverager.cpp  rectaverager.h
Scripts/: build-FaceViewer.sh  build-all.sh  build-libIFD.sh  build-libfacedetection.sh  build-mediapipe.sh  build-openpnp-capture.sh
libIFD/: CMakeLists.txt  backend.h  convert.cpp  convert.h  dlibbackend.cpp  dlibbackend.h  dummybackend.cpp  dummybackend.h  ifd.cpp  libfacedetectionbackend.cpp  libfacedetectionbackend.h  mediapipebackend.cpp  mediapipebackend.h  namespace.h  opencvbackend.cpp  opencvbackend.h
libIFD/include/: ifd.h
libIFD/mediapipe/: BUILD  README  mediapipebackendimpl.cpp  mediapipebackendimpl.h
libIFD/mediapipe/mediapipe/modules/face_detection/: README
libIFD/opencv/: makeheader.py
libIFD/tests/: Makefile  benchmark.cpp  conversions.cpp
